--- a/style.css
+++ b/style.css
@@ -118,15 +118,25 @@ body {
   color: #000;
   -webkit-font-smoothing: antialiased;
 }
-body.noscroll, body.display-search {
+body.display-search {
   overflow-x: hidden;
   width: 100%;
   position: fixed;
 }
-body.noscroll #wpadminbar, body.display-search #wpadminbar {
+body.display-search #wpadminbar {
   top: -46px;
 }
 
+@media all and (max-width: 799px) {
+  body.noscroll {
+    overflow-x: hidden;
+    width: 100%;
+    position: fixed;
+  }
+  body.noscroll #wpadminbar {
+    top: -46px;
+  }
+}
 .overflow-container {
   position: relative;
   overflow: hidden;
@@ -862,54 +872,6 @@ a img {
   -webkit-transition: opacity 0.35s, visibility 0.35s, -webkit-transform 0.25s;
   transition: opacity 0.35s, visibility 0.35s, transform 0.25s;
 }
-.menu-primary-container.open {
-  opacity: 1;
-  visibility: visible;
-  -webkit-transform: translateX(-100%);
-  -ms-transform: translateX(-100%);
-  transform: translateX(-100%);
-}
-.menu-primary-container.tier-2 .dropdown-navigation, .menu-primary-container.tier-3 .dropdown-navigation, .menu-primary-container.tier-4 .dropdown-navigation, .menu-primary-container.tier-5 .dropdown-navigation {
-  opacity: 1;
-  visibility: visible;
-}
-.menu-primary-container.tier-2 .menu-secondary-container, .menu-primary-container.tier-3 .menu-secondary-container, .menu-primary-container.tier-4 .menu-secondary-container, .menu-primary-container.tier-5 .menu-secondary-container {
-  position: absolute;
-  width: 100%;
-  top: 48px;
-}
-.menu-primary-container.tier-2 .social-media-icons, .menu-primary-container.tier-3 .social-media-icons, .menu-primary-container.tier-4 .social-media-icons, .menu-primary-container.tier-5 .social-media-icons {
-  opacity: 0;
-  visibility: hidden;
-}
-.menu-primary-container.tier-2 .menu-primary,
-.menu-primary-container.tier-2 .menu-secondary-container,
-.menu-primary-container.tier-2 .social-media-icons {
-  -webkit-transform: translateX(-100%);
-  -ms-transform: translateX(-100%);
-  transform: translateX(-100%);
-}
-.menu-primary-container.tier-3 .menu-primary,
-.menu-primary-container.tier-3 .menu-secondary-container,
-.menu-primary-container.tier-3 .social-media-icons {
-  -webkit-transform: translateX(-200%);
-  -ms-transform: translateX(-200%);
-  transform: translateX(-200%);
-}
-.menu-primary-container.tier-4 .menu-primary,
-.menu-primary-container.tier-4 .menu-secondary-container,
-.menu-primary-container.tier-4 .social-media-icons {
-  -webkit-transform: translateX(-300%);
-  -ms-transform: translateX(-300%);
-  transform: translateX(-300%);
-}
-.menu-primary-container.tier-5 .menu-primary,
-.menu-primary-container.tier-5 .menu-secondary-container,
-.menu-primary-container.tier-5 .social-media-icons {
-  -webkit-transform: translateX(-400%);
-  -ms-transform: translateX(-400%);
-  transform: translateX(-400%);
-}
 
 .admin-bar .menu-primary-container {
   top: 113px;
@@ -944,12 +906,6 @@ a img {
 .menu-unset ul li.current-menu-item > a,
 .menu-unset ul li.current-menu-ancestor > a {
   text-decoration: underline;
-}
-.menu-primary-items li.current > ul, .menu-primary-items li.current-ancestor > ul,
-.menu-unset ul li.current > ul,
-.menu-unset ul li.current-ancestor > ul {
-  opacity: 1;
-  visibility: visible;
 }
 .menu-primary-items a,
 .menu-unset ul a {
@@ -1059,6 +1015,63 @@ a img {
   top: -42px;
 }
 
+@media all and (max-width: 799px) {
+  .menu-primary-container.open {
+    opacity: 1;
+    visibility: visible;
+    -webkit-transform: translateX(-100%);
+    -ms-transform: translateX(-100%);
+    transform: translateX(-100%);
+  }
+  .menu-primary-container.tier-2 .dropdown-navigation, .menu-primary-container.tier-3 .dropdown-navigation, .menu-primary-container.tier-4 .dropdown-navigation, .menu-primary-container.tier-5 .dropdown-navigation {
+    opacity: 1;
+    visibility: visible;
+  }
+  .menu-primary-container.tier-2 .menu-secondary-container, .menu-primary-container.tier-3 .menu-secondary-container, .menu-primary-container.tier-4 .menu-secondary-container, .menu-primary-container.tier-5 .menu-secondary-container {
+    position: absolute;
+    width: 100%;
+    top: 48px;
+  }
+  .menu-primary-container.tier-2 .social-media-icons, .menu-primary-container.tier-3 .social-media-icons, .menu-primary-container.tier-4 .social-media-icons, .menu-primary-container.tier-5 .social-media-icons {
+    opacity: 0;
+    visibility: hidden;
+  }
+  .menu-primary-container.tier-2 .menu-primary,
+  .menu-primary-container.tier-2 .menu-secondary-container,
+  .menu-primary-container.tier-2 .social-media-icons {
+    -webkit-transform: translateX(-100%);
+    -ms-transform: translateX(-100%);
+    transform: translateX(-100%);
+  }
+  .menu-primary-container.tier-3 .menu-primary,
+  .menu-primary-container.tier-3 .menu-secondary-container,
+  .menu-primary-container.tier-3 .social-media-icons {
+    -webkit-transform: translateX(-200%);
+    -ms-transform: translateX(-200%);
+    transform: translateX(-200%);
+  }
+  .menu-primary-container.tier-4 .menu-primary,
+  .menu-primary-container.tier-4 .menu-secondary-container,
+  .menu-primary-container.tier-4 .social-media-icons {
+    -webkit-transform: translateX(-300%);
+    -ms-transform: translateX(-300%);
+    transform: translateX(-300%);
+  }
+  .menu-primary-container.tier-5 .menu-primary,
+  .menu-primary-container.tier-5 .menu-secondary-container,
+  .menu-primary-container.tier-5 .social-media-icons {
+    -webkit-transform: translateX(-400%);
+    -ms-transform: translateX(-400%);
+    transform: translateX(-400%);
+  }
+
+  .menu-primary-items li.current > ul, .menu-primary-items li.current-ancestor > ul,
+  .menu-unset ul li.current > ul,
+  .menu-unset ul li.current-ancestor > ul {
+    opacity: 1;
+    visibility: visible;
+  }
+}
 @media all and (min-width: 37.5em) {
   .menu-primary-container {
     max-width: 440px;
@@ -1086,6 +1099,11 @@ a img {
     text-align: center;
     border-top: solid 2px #000;
     border-bottom: solid 1px #DCDCDC;
+  }
+  .menu-primary-container.open {
+    -webkit-transform: none;
+    -ms-transform: none;
+    transform: none;
   }
 
   .menu-primary-items,
@@ -1326,6 +1344,12 @@ a img {
   left: 500%;
 }
 
+@media all and (max-width: 799px) {
+  .menu-secondary-items li.current ul, .menu-secondary-items li.current-ancestor ul {
+    opacity: 1;
+    visibility: visible;
+  }
+}
 @media all and (min-width: 50em) {
   .menu-secondary-container {
     display: block;
@@ -1353,10 +1377,12 @@ a img {
   .menu-secondary-items li.menu-item-has-children > a:after {
     content: '\f107';
     font-family: "FontAwesome";
+    display: inline-block;
     position: relative;
     margin-left: 3px;
     line-height: 1;
     top: 0;
+    text-decoration: none;
   }
   .menu-secondary-items a {
     display: inline-block;
