--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -13,6 +13,7 @@ body {
   padding: 0;
   font-family: $pt-serif;
   color: #000;
+  background: #fff;
   -webkit-font-smoothing: antialiased;
 
   &.display-search {
@@ -34,6 +35,22 @@ body {
       overflow-x: hidden;
       width: 100%;
       position: fixed;
+
+      #wpadminbar {
+        top: -46px;
+      }
+    }
+  }
+}
+@media all and (min-width: 600px) {
+
+  body {
+
+    &.noscroll {
+
+      #wpadminbar {
+        top: 0;
+      }
     }
   }
 }
