--- a/sass/_post.scss
+++ b/sass/_post.scss
@@ -1,75 +1,154 @@
 .featured-image {
   position: relative;
-  height: 0;
-  padding-bottom: 50%;
-  overflow: hidden;
+//  height: 0;
+//  padding-bottom: 50%;
+//  overflow: hidden;
 
   > a {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
     font-size: 0;
+    transition: opacity 0.15s;
 
-    &:after {
-      content: '';
-      position: absolute;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      background: white;
-      opacity: 0;
-      transition: opacity 0.1s ease-in-out;
-    }
+    &:hover,
+    &:active,
     &:focus {
-
-      &:after {
-        opacity: 0.2;
-      }
+      opacity: 0.9;
     }
   }
-  > img,
-  > a > img {
-    position: absolute;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
+//
+//  > a {
+//    position: absolute;
+//    top: 0;
+//    right: 0;
+//    bottom: 0;
+//    left: 0;
+//    font-size: 0;
+//
+//    &:after {
+//      content: '';
+//      position: absolute;
+//      top: 0;
+//      right: 0;
+//      bottom: 0;
+//      left: 0;
+//      background: white;
+//      opacity: 0;
+//      transition: opacity 0.1s ease-in-out;
+//    }
+//    &:focus {
+//
+//      &:after {
+//        opacity: 0.2;
+//      }
+//    }
+//  }
+//  > img,
+//  > a > img {
+//    position: absolute;
+//    left: 0;
+//    height: 100%;
+//    width: 100%;
+//    object-fit: cover;
+//
+//    &.no-object-fit {
+//      min-width: 0;
+//      min-height: 0;
+//      max-width: 100%;
+//      max-height: 100%;
+//      height: auto;
+//      width: auto;
+//
+//      // positioning
+//      top: 50%;
+//      right: 50%;
+//      left: auto;
+//      transform: translateX(50%) translateY(-50%);
+//    }
+//  }
+//  .ccfic {
+//    position: absolute;
+//    width: 100%;
+//    bottom: 0;
+//    text-align: center;
+//    background: rgba(0,0,0,0.7);
+//    color: white;
+//    padding: 4px 4px 4px 12px;
+//    font-size: 13px;
+//  }
+}
+.entry {
+  margin-bottom: $baseline-height * 0.75;
+  padding-bottom: $baseline-height * 0.75;
+  border-bottom: solid 1px $color-gray-86;
+}
+.post-header {
+  margin: $baseline-height/2 0;
+}
+.post-title {
+  @extend %eighteen-pixels;
 
-    &.no-object-fit {
-      min-width: 0;
-      min-height: 0;
-      max-width: 100%;
-      max-height: 100%;
-      height: auto;
-      width: auto;
-
-      // positioning
-      top: 50%;
-      right: 50%;
-      left: auto;
-      transform: translateX(50%) translateY(-50%);
-    }
-  }
-  .ccfic {
-    position: absolute;
-    width: 100%;
-    bottom: 0;
-    text-align: center;
-    background: rgba(0,0,0,0.7);
-    color: white;
-    padding: 4px 4px 4px 12px;
-    font-size: 13px;
+  a {
+    @extend %black-link;
   }
 }
-.post-content {
+.post-byline {
+  @extend %twelve-pixels;
+  @extend %uppercase;
+  color: $color-gray-40;
 
+}
+.post-content {
+  margin-top: $baseline-height/2;
+
+  > p:first-child {
+    margin-top: 0;
+  }
+  > p:last-child {
+    margin-bottom: 0;
+  }
   iframe {
     max-width: 100%;
   }
   &:after {
     @include clearfix;
+  }
+}
+
+@media all and (min-width: $five-hundred) {
+
+  .post-title {
+    font-size: 1.3125em; /* 21px / 16px */
+    line-height: 1.143; /* 24px */
+  }
+}
+
+@media all and (min-width: $six-hundred) {
+
+  .post-title {
+    font-size: 1.75em; /* 28px / 16px */
+    line-height: 1.357; /* 38px */
+  }
+}
+
+@media all and (min-width: $eight-hundred) {
+
+  .post-title {
+    font-size: 1.125em; /* 18px / 16px */
+    line-height: 1.333; /* 24px */
+  }
+}
+
+@media all and (min-width: $nine-hundred) {
+
+  .post-title {
+    font-size: 1.3125em; /* 21px / 16px */
+    line-height: 1.143; /* 24px */
+  }
+}
+
+@media all and (min-width: $eleven-hundred) {
+
+  .post-title {
+    font-size: 1.75em; /* 28px / 16px */
+    line-height: 1.357; /* 38px */
   }
 }
