post list widget setup and saving properly

--- a/sass/admin.scss
+++ b/sass/admin.scss
@@ -1,6 +1,13 @@
-/* Back-end styles */
+/* Widgets */
 
-/* styles for theme options page */
+.mission-post-list-widget {
+
+  select {
+    display: block;
+  }
+}
+
+/* Theme options page */
 
 #ct_mission-dashboard-wrap {
 
