--- a/sass/admin.scss
+++ b/sass/admin.scss
@@ -16,6 +16,16 @@
   h4 {
     margin-bottom: 6px;
   }
+  .category,
+  .tag {
+    //margin: -6px 0 18px;
+    margin: -4px -12px 0;
+    padding: 0 12px 18px 12px;
+    border-bottom: solid 1px #DCDCDC;
+  }
+  .relationship {
+    padding-bottom: 6px;
+  }
 }
 .widgets-php #available-widgets {
 
