--- a/styles/admin.css
+++ b/styles/admin.css
@@ -13,6 +13,15 @@
 .mission-post-list-widget h4 {
   margin-bottom: 6px;
 }
+.mission-post-list-widget .category,
+.mission-post-list-widget .tag {
+  margin: -4px -12px 0;
+  padding: 0 12px 18px 12px;
+  border-bottom: solid 1px #DCDCDC;
+}
+.mission-post-list-widget .relationship {
+  padding-bottom: 6px;
+}
 
 .widgets-php #available-widgets [id*=ct_mission_post_list] .widget-top {
   background: #05B0E7;
