--- a/sass/admin.scss
+++ b/sass/admin.scss
@@ -9,6 +9,7 @@
     clear: both;
   }
   .container {
+    position: relative;
     border: solid 1px #DCDCDC;
     padding: 0 12px;
     margin: 12px 0;
@@ -25,6 +26,41 @@
   }
   .relationship {
     padding-bottom: 6px;
+  }
+  .tooltip {
+    position: absolute;
+    top: 6px;
+    right: 6px;
+  }
+  .tip-icon {
+    display: inline-block;
+    width: 18px;
+    height: 18px;
+    line-height: 18px;
+    text-align: center;
+    color: #fff;
+    background: #05B0E7;
+    border-radius: 50%;
+    text-decoration: none;
+
+    &:hover {
+
+      + p {
+        transform: translateY(-4px);
+        opacity: 1;
+      }
+    }
+  }
+  .tip {
+    position: absolute;
+    width: 320px;
+    color: #fff;
+    background: rgba(0,0,0,0.8);
+    padding: 12px;
+    right: calc(100% + 6px);
+    top: -8px;
+    opacity: 0;
+    transition: opacity 0.25s, transform 0.25s;
   }
 }
 .widgets-php #available-widgets {
