--- a/rtl.css
+++ b/rtl.css
@@ -33,7 +33,7 @@ h2, .toggle-dropdown {
   /* 24px */
 }
 
-.post-title {
+.post-title, .widget_ct_mission_post_list .style-1 .title {
   font-size: 1.125em;
   /* 18px / 16px */
   line-height: 1.333;
@@ -48,14 +48,14 @@ input[type="search"],
 input[type="tel"],
 input[type="url"],
 textarea, input[type="submit"], .sidebar-left .widget-title,
-.sidebar-right .widget-title {
+.sidebar-right .widget-title, .widget_ct_mission_post_list .style-2 .title {
   font-size: 0.875em;
   /* 14px / 16px */
   line-height: 1.286;
   /* 18px */
 }
 
-textarea, .tagline {
+textarea, .tagline, .widget_ct_mission_post_list .style-2 .excerpt {
   font-size: 0.875em;
   /* 14px / 16px */
   line-height: 1.571;
@@ -63,34 +63,34 @@ textarea, .tagline {
 }
 
 .wp-caption-text,
-.gallery-caption, .dropdown-navigation a, .dropdown-navigation span, .menu-secondary-items a, .post-byline {
+.gallery-caption, .dropdown-navigation a, .dropdown-navigation span, .menu-secondary-items a, .post-byline, .widget_recent_entries .post-date, .widget_rss .rss-date, .widget_ct_mission_post_list .comments-link, .widget_calendar table caption {
   font-size: 0.75em;
   /* 12px / 16px */
   line-height: 1.5;
   /* 18px */
 }
 
-.site-header .date {
+.site-header .date, .widget_ct_mission_post_list .style-2 .post-byline, .widget_ct_mission_post_list .style-2 .widget_recent_entries .post-date, .widget_recent_entries .widget_ct_mission_post_list .style-2 .post-date, .widget_ct_mission_post_list .style-2 .widget_rss .rss-date, .widget_rss .widget_ct_mission_post_list .style-2 .rss-date {
   font-size: 0.625em;
   /* 12px / 16px */
   line-height: 1.8;
   /* 18px */
 }
 
-.search-toggle span, .search-form-popup .search-submit, .dropdown-navigation a, .dropdown-navigation span, .menu-secondary-items a, .post-byline, .sidebar-left .widget-title,
-.sidebar-right .widget-title {
+.search-toggle span, .search-form-popup .search-submit, .dropdown-navigation a, .dropdown-navigation span, .menu-secondary-items a, .post-byline, .widget_recent_entries .post-date, .widget_rss .rss-date, .sidebar-left .widget-title,
+.sidebar-right .widget-title, .widget_ct_mission_post_list .style-2 .post-byline, .widget_ct_mission_post_list .style-2 .widget_recent_entries .post-date, .widget_recent_entries .widget_ct_mission_post_list .style-2 .post-date, .widget_ct_mission_post_list .style-2 .widget_rss .rss-date, .widget_rss .widget_ct_mission_post_list .style-2 .rss-date, .widget_calendar table caption {
   text-transform: uppercase;
   letter-spacing: 0.03em;
 }
 
-.site-title a, .post-title a {
+.site-title a, .post-title a, .widget_ct_mission_post_list .title, .widget_ct_mission_post_list .comments-link a {
   color: #000;
   text-decoration: none;
 }
-.site-title a:link, .post-title a:link, .site-title a:visited, .post-title a:visited {
+.site-title a:link, .post-title a:link, .widget_ct_mission_post_list .title:link, .widget_ct_mission_post_list .comments-link a:link, .site-title a:visited, .post-title a:visited, .widget_ct_mission_post_list .title:visited, .widget_ct_mission_post_list .comments-link a:visited {
   color: #000;
 }
-.site-title a:hover, .post-title a:hover, .site-title a:active, .post-title a:active, .site-title a:focus, .post-title a:focus {
+.site-title a:hover, .post-title a:hover, .widget_ct_mission_post_list .title:hover, .widget_ct_mission_post_list .comments-link a:hover, .site-title a:active, .post-title a:active, .widget_ct_mission_post_list .title:active, .widget_ct_mission_post_list .comments-link a:active, .site-title a:focus, .post-title a:focus, .widget_ct_mission_post_list .title:focus, .widget_ct_mission_post_list .comments-link a:focus {
   color: #666666;
 }
 
@@ -830,6 +830,7 @@ a img {
 
 .main {
   padding: 0 5.556%;
+  border-bottom: solid 1px #DCDCDC;
 }
 
 @media all and (min-width: 37.5em) {
@@ -1578,7 +1579,7 @@ a img {
   margin: 0.75em 0;
 }
 
-.post-byline {
+.post-byline, .widget_recent_entries .post-date, .widget_rss .rss-date {
   color: #666666;
 }
 
@@ -1643,6 +1644,11 @@ a img {
     /* 38px */
   }
 }
+.sidebar-left,
+.sidebar-right {
+  padding: 0 5.556%;
+  margin: 1.5em 0;
+}
 .sidebar-left .widget,
 .sidebar-right .widget {
   margin-bottom: 1.5em;
@@ -1654,11 +1660,41 @@ a img {
   color: #666666;
 }
 
+@media all and (min-width: 37.5em) {
+  .sidebar {
+    padding: 0 2.778%;
+    width: 50%;
+  }
+
+  .sidebar-left {
+    position: relative;
+    float: right;
+    padding-left: 1.125em;
+  }
+  .sidebar-left:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: -1px;
+    bottom: 0;
+    width: 1px;
+    background: #DCDCDC;
+  }
+
+  .sidebar-right {
+    float: left;
+    padding-right: 1.125em;
+    border-right: solid 1px #DCDCDC;
+  }
+}
 @media all and (min-width: 50em) {
   .sidebar {
     -webkit-flex: 1;
     -ms-flex: 1;
     flex: 1;
+    margin: 0;
+    float: none;
+    width: 22.224%;
   }
 
   .sidebar-left {
@@ -1666,8 +1702,11 @@ a img {
     -ms-flex-order: 1;
     order: 1;
     margin-right: 2.778%;
+    padding-right: 0;
     border-left: solid 1px #DCDCDC;
-    padding-left: 1.125em;
+  }
+  .sidebar-left:before {
+    display: none;
   }
 
   .sidebar-right {
@@ -1675,8 +1714,236 @@ a img {
     -ms-flex-order: 3;
     order: 3;
     margin-left: 2.778%;
-    border-right: solid 1px #DCDCDC;
-    padding-right: 1.125em;
+    padding-left: 0;
+  }
+}
+.widget-title {
+  margin-bottom: 1.125em;
+}
+
+.widget_ct_mission_post_list ul {
+  margin: 0;
+  list-style: none;
+}
+.widget_ct_mission_post_list .title {
+  display: block;
+  font-family: "PT Serif", serif;
+}
+.widget_ct_mission_post_list .excerpt p:first-child {
+  margin-top: 0;
+}
+.widget_ct_mission_post_list .excerpt p:last-child {
+  margin-bottom: 0;
+}
+.widget_ct_mission_post_list .comments-link {
+  display: block;
+  font-style: italic;
+  margin-top: 6px;
+}
+.widget_ct_mission_post_list .comments-link i {
+  margin-left: 2px;
+}
+.widget_ct_mission_post_list .style-1 li {
+  margin-bottom: 1.5em;
+}
+.widget_ct_mission_post_list .style-1 .title {
+  font-weight: 700;
+  font-style: italic;
+  margin: 6px 0;
+}
+.widget_ct_mission_post_list .style-1 .post-byline, .widget_ct_mission_post_list .style-1 .widget_recent_entries .post-date, .widget_recent_entries .widget_ct_mission_post_list .style-1 .post-date, .widget_ct_mission_post_list .style-1 .widget_rss .rss-date, .widget_rss .widget_ct_mission_post_list .style-1 .rss-date {
+  margin: 6px 0;
+}
+.widget_ct_mission_post_list .style-1 .featured-image {
+  margin-bottom: 12px;
+}
+.widget_ct_mission_post_list .style-2 li {
+  margin-bottom: 0.75em;
+}
+.widget_ct_mission_post_list .style-2 .top {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin-bottom: 6px;
+}
+.widget_ct_mission_post_list .style-2 .top:after {
+  content: ".";
+  display: block;
+  clear: both;
+  visibility: hidden;
+  line-height: 0;
+  height: 0;
+}
+.widget_ct_mission_post_list .style-2 .post-byline, .widget_ct_mission_post_list .style-2 .widget_recent_entries .post-date, .widget_recent_entries .widget_ct_mission_post_list .style-2 .post-date, .widget_ct_mission_post_list .style-2 .widget_rss .rss-date, .widget_rss .widget_ct_mission_post_list .style-2 .rss-date {
+  font-family: "PT Sans", sans-serif;
+  font-weight: 700;
+}
+.widget_ct_mission_post_list .style-2 .bottom .excerpt {
+  margin-bottom: 18px;
+}
+.widget_ct_mission_post_list .style-2 .bottom .excerpt + span {
+  margin-bottom: 18px;
+  margin-top: -12px;
+}
+.widget_ct_mission_post_list .style-2 .excerpt {
+  clear: right;
+}
+.widget_ct_mission_post_list .style-2 li .featured-image {
+  width: 30%;
+  float: right;
+  margin: 0 0 0 12px;
+  padding-bottom: 22.5%;
+  -webkit-flex-shrink: 0;
+  -ms-flex-negative: 0;
+  flex-shrink: 0;
+}
+
+.widget > ul {
+  margin: 0;
+  list-style: none;
+}
+.widget > ul li {
+  margin-bottom: 6px;
+}
+.widget select {
+  margin-bottom: 6px;
+}
+
+.widget_search form {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.widget_categories li,
+.widget_pages li {
+  color: #666666;
+}
+.widget_categories ul,
+.widget_pages ul {
+  list-style: none;
+}
+.widget_categories ul ul,
+.widget_pages ul ul {
+  margin: 6px 12px 0 0;
+}
+
+.widget_calendar {
+  text-align: center;
+}
+.widget_calendar table {
+  margin: 0 auto;
+  width: 100%;
+  font-family: "PT Sans", sans-serif;
+}
+.widget_calendar table caption {
+  font-family: "PT Sans", sans-serif;
+  font-weight: 700;
+  margin-bottom: 6px;
+}
+.widget_calendar td,
+.widget_calendar th {
+  padding: 4px 0;
+}
+.widget_calendar #prev,
+.widget_calendar #next {
+  padding: 0;
+}
+.widget_calendar #prev a,
+.widget_calendar #next a {
+  display: block;
+  border: none;
+  padding: 4px 0;
+  text-decoration: none;
+}
+.widget_calendar #prev a:hover, .widget_calendar #prev a:active, .widget_calendar #prev a:focus,
+.widget_calendar #next a:hover,
+.widget_calendar #next a:active,
+.widget_calendar #next a:focus {
+  color: #fff;
+  background: #000;
+}
+.widget_calendar #today {
+  background: #000;
+  color: #fff;
+}
+
+.widget_nav_menu .menu {
+  list-style: none;
+  margin: 0;
+}
+.widget_nav_menu .menu ul {
+  list-style: none;
+  margin: 6px 12px 0 0;
+}
+.widget_nav_menu .menu li {
+  margin-bottom: 6px;
+}
+
+.widget_recent_entries .post-date {
+  display: block;
+}
+
+.widget_rss .widget-title img {
+  margin-left: 4px;
+}
+.widget_rss .widget-title a:hover, .widget_rss .widget-title a:active, .widget_rss .widget-title a:focus {
+  text-decoration: none;
+}
+.widget_rss .rssSummary {
+  margin: 0.75em 0;
+}
+.widget_rss .rssSummary + cite {
+  display: block;
+}
+.widget_rss .rss-date {
+  margin-bottom: 12px;
+}
+.widget_rss li {
+  display: block;
+}
+.widget_rss cite,
+.widget_rss span {
+  margin-bottom: 1.5em;
+  display: block;
+  color: #666666;
+}
+.widget_rss span + cite {
+  margin-top: -0.75em;
+}
+
+@media all and (min-width: 50em) and (max-width: 68.75em) {
+  .widget_ct_mission_post_list .style-2 .top {
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
+  .widget_ct_mission_post_list .style-2 .top-inner {
+    width: 100%;
+  }
+  .widget_ct_mission_post_list .style-2 li .featured-image {
+    float: none;
+    width: 100%;
+    padding-bottom: 75%;
+    margin: 0 0 6px 0;
+  }
+
+  .widget_search form {
+    display: block;
+  }
+  .widget_search .search-submit {
+    width: 100%;
+  }
+}
+@media all and (min-width: 62.5em) {
+  .widget_ct_mission_post_list .style-1 .title {
+    font-size: 1.3125em;
+    /* 21px / 16px */
+    line-height: 1.143;
+    /* 24px */
   }
 }
 .layout-double .double {
@@ -1687,52 +1954,13 @@ a img {
   margin-bottom: 0;
 }
 
-.layout-double .double .featured-image,
-.layout-rows .rows .featured-image,
-.layout-rows-excerpt .rows-excerpt .featured-image {
-  height: 0;
-  padding-bottom: 66%;
-  overflow: hidden;
-}
-.layout-double .double .featured-image > img,
-.layout-double .double .featured-image > a > img,
-.layout-rows .rows .featured-image > img,
-.layout-rows .rows .featured-image > a > img,
-.layout-rows-excerpt .rows-excerpt .featured-image > img,
-.layout-rows-excerpt .rows-excerpt .featured-image > a > img {
-  position: absolute;
-  right: 0;
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
-}
-.layout-double .double .featured-image > img.no-object-fit,
-.layout-double .double .featured-image > a > img.no-object-fit,
-.layout-rows .rows .featured-image > img.no-object-fit,
-.layout-rows .rows .featured-image > a > img.no-object-fit,
-.layout-rows-excerpt .rows-excerpt .featured-image > img.no-object-fit,
-.layout-rows-excerpt .rows-excerpt .featured-image > a > img.no-object-fit {
-  min-width: 0;
-  min-height: 0;
-  max-width: 100%;
-  max-height: 100%;
-  height: auto;
-  width: auto;
-  top: 50%;
-  left: 50%;
-  right: auto;
-  -webkit-transform: translateX(50%) translateY(-50%);
-  -ms-transform: translateX(50%) translateY(-50%);
-  transform: translateX(50%) translateY(-50%);
-}
-
 @media all and (min-width: 37.5em) {
   .layout-double .entry:first-child {
     border-bottom: none;
     padding-bottom: 0;
   }
   .layout-double .double {
-    width: 48%;
+    width: 50%;
     float: right;
     border-bottom: none;
     border-top: solid 1px #DCDCDC;
@@ -1820,4 +2048,47 @@ a img {
     line-height: 1.333;
     /* 24px */
   }
+}
+.layout-double .double .featured-image,
+.layout-rows .rows .featured-image,
+.layout-rows-excerpt .rows-excerpt .featured-image,
+.widget_ct_mission_post_list .style-2 .featured-image {
+  height: 0;
+  padding-bottom: 75%;
+  overflow: hidden;
+}
+.layout-double .double .featured-image > img,
+.layout-double .double .featured-image > a > img,
+.layout-rows .rows .featured-image > img,
+.layout-rows .rows .featured-image > a > img,
+.layout-rows-excerpt .rows-excerpt .featured-image > img,
+.layout-rows-excerpt .rows-excerpt .featured-image > a > img,
+.widget_ct_mission_post_list .style-2 .featured-image > img,
+.widget_ct_mission_post_list .style-2 .featured-image > a > img {
+  position: absolute;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+.layout-double .double .featured-image > img.no-object-fit,
+.layout-double .double .featured-image > a > img.no-object-fit,
+.layout-rows .rows .featured-image > img.no-object-fit,
+.layout-rows .rows .featured-image > a > img.no-object-fit,
+.layout-rows-excerpt .rows-excerpt .featured-image > img.no-object-fit,
+.layout-rows-excerpt .rows-excerpt .featured-image > a > img.no-object-fit,
+.widget_ct_mission_post_list .style-2 .featured-image > img.no-object-fit,
+.widget_ct_mission_post_list .style-2 .featured-image > a > img.no-object-fit {
+  min-width: 0;
+  min-height: 0;
+  max-width: 100%;
+  max-height: 100%;
+  height: auto;
+  width: auto;
+  top: 50%;
+  left: 50%;
+  right: auto;
+  -webkit-transform: translateX(50%) translateY(-50%);
+  -ms-transform: translateX(50%) translateY(-50%);
+  transform: translateX(50%) translateY(-50%);
 }
