--- a/sass/_post.scss
+++ b/sass/_post.scss
@@ -1,88 +1,10 @@
-.featured-image {
-  position: relative;
-  line-height: 0;
-//  height: 0;
-//  padding-bottom: 50%;
-//  overflow: hidden;
-
-  > a {
-    font-size: 0;
-    transition: opacity 0.15s;
-
-    &:hover,
-    &:active,
-    &:focus {
-      opacity: 0.9;
-    }
-  }
-  img {
-    width: 100%;
-  }
-
-//  > a {
-//    position: absolute;
-//    top: 0;
-//    right: 0;
-//    bottom: 0;
-//    left: 0;
-//    font-size: 0;
-//
-//    &:after {
-//      content: '';
-//      position: absolute;
-//      top: 0;
-//      right: 0;
-//      bottom: 0;
-//      left: 0;
-//      background: white;
-//      opacity: 0;
-//      transition: opacity 0.1s ease-in-out;
-//    }
-//    &:focus {
-//
-//      &:after {
-//        opacity: 0.2;
-//      }
-//    }
-//  }
-//  > img,
-//  > a > img {
-//    position: absolute;
-//    left: 0;
-//    height: 100%;
-//    width: 100%;
-//    object-fit: cover;
-//
-//    &.no-object-fit {
-//      min-width: 0;
-//      min-height: 0;
-//      max-width: 100%;
-//      max-height: 100%;
-//      height: auto;
-//      width: auto;
-//
-//      // positioning
-//      top: 50%;
-//      right: 50%;
-//      left: auto;
-//      transform: translateX(50%) translateY(-50%);
-//    }
-//  }
-  .ccfic {
-    position: absolute;
-    width: 100%;
-    bottom: 0;
-    text-align: center;
-    background: rgba(0,0,0,0.7);
-    color: white;
-    padding: 4px 4px 4px 12px;
-    font-size: 13px;
-  }
-}
 .entry {
   margin-bottom: $baseline-height * 0.75;
   padding-bottom: $baseline-height * 0.75;
   border-bottom: solid 1px $color-gray-86;
+}
+.single .entry {
+  border-bottom: none;
 }
 .post-header {
   margin: $baseline-height/2 0;
@@ -116,12 +38,153 @@
     @include clearfix;
   }
 }
+.post-categories {
+  font-style: italic;
+  margin-bottom: $baseline-height * 0.75;
+}
+.post-tags {
+  margin: $baseline-height * 0.75 0;
+
+  ul {
+    list-style: none;
+    margin: 0;
+  }
+  li {
+    display: inline-block;
+  }
+  a {
+    @extend %black-link;
+    @extend %twelve-pixels;
+    padding: 3px 12px;
+    background: $color-gray-95;
+    margin-right: 6px;
+    transition: color 0.15s, background 0.15s;
+
+    &:hover,
+    &:active,
+    &:focus {
+      background: $color-gray-86;
+      color: #000;
+    }
+  }
+}
+.post-author {
+  padding: $baseline-height 0;
+  margin: $baseline-height * 0.75 0;
+  border-top: solid 1px $color-gray-86;
+  border-bottom: solid 1px $color-gray-86;
+
+  display: flex;
+
+  .avatar-container {
+    float: left;
+    margin-right: 15px;
+  }
+  .avatar {
+    border-radius: 50%;
+  }
+  h3 {
+    font-weight: 700;
+    font-style: italic;
+    margin-bottom: 6px;
+  }
+  p {
+    color: $color-gray-40;
+
+    &:first-of-type {
+      margin-top: 0;
+    }
+    &:last-of-type {
+      margin-bottom: 0;
+    }
+  }
+}
+.more-from-category {
+  margin: $baseline-height * 0.75 0;
+
+  .top {
+    font-family: $pt-sans;
+    margin-bottom: $baseline-height * 0.75;
+
+    &:after {
+      @include clearfix;
+    }
+  }
+  .section-title {
+
+    span {
+      font-weight: 700;
+    }
+  }
+  .category-link {
+    @extend %twelve-pixels;
+    line-height: 2;
+    float: right;
+    text-decoration: none;
+
+    &:hover,
+    &:active,
+    &:focus {
+      text-decoration: underline;
+    }
+  }
+  ul {
+    list-style: none;
+    margin: 0;
+  }
+  li {
+    margin-bottom: $baseline-height * 0.75;
+    padding-bottom: $baseline-height * 0.75;
+    border-bottom: solid 1px $color-gray-86;
+  }
+  .title {
+    @extend %black-link;
+    @extend %eighteen-pixels;
+    display: block;
+    margin-top: $baseline-height/2;
+  }
+}
 
 @media all and (min-width: $five-hundred) {
 
   .post-title {
     font-size: 1.3125em; /* 21px / 16px */
     line-height: 1.143; /* 24px */
+  }
+  .more-from-category {
+
+    .category-container {
+      margin: $baseline-height * 0.75 0;
+      border-bottom: solid 1px $color-gray-86;
+    }
+    ul {
+
+      &:after {
+        @include clearfix;
+      }
+    }
+    li {
+      width: 50%;
+      float: left;
+      border-bottom: none;
+      margin-bottom: 0;
+
+      &:nth-child(odd) {
+        padding-right: $baseline-height/2;
+        border-right: solid 1px $color-gray-86;
+        clear: left;
+      }
+      &:nth-child(even) {
+        padding-left: $baseline-height/2;
+        border-left: solid 1px $color-gray-86;
+        margin-left: -1px;
+      }
+      &:nth-child(3),
+      &:nth-child(4) {
+        border-top: solid 1px $color-gray-86;
+        padding-top: $baseline-height * 0.75;
+      }
+    }
   }
 }
 
